--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
+    "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
